[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/character-spritesheet.png" type="Texture" id=2]
[ext_resource path="res://player/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/industrial.v2.png" type="Texture" id=4]
[ext_resource path="res://player/states/idle.gd" type="Script" id=5]
[ext_resource path="res://player/states/walk.gd" type="Script" id=6]
[ext_resource path="res://player/states/jump.gd" type="Script" id=7]
[ext_resource path="res://player/states/double_jump.gd" type="Script" id=8]
[ext_resource path="res://player/states/fall.gd" type="Script" id=9]
[ext_resource path="res://player/states/dash.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AttackHitbox/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.15, 0.25, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackHitbox/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=2]
resource_name = "dash"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=4]
length = 1.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3, 2, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 4 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/dash = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
vframes = 8
hframes = 8
frame = 43
region_enabled = true
region_rect = Rect2( 0, 0, 128, 128 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -7 )
shape = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CameraAnchor" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="Camera2D" type="Camera2D" parent="CameraAnchor"]
current = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 3 )

[node name="PositionTween" type="Tween" parent="CameraAnchor/Camera2D"]

[node name="AttackHitbox" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 18, -7 )

[node name="Sprite" type="Sprite" parent="AttackHitbox"]
visible = false
texture = ExtResource( 4 )
hframes = 4
frame = 3
region_enabled = true
region_rect = Rect2( 64, 288, 128, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource( 8 )
disabled = true

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="DoubleJump" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="Dash" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="DashDuration" type="Timer" parent="States/Dash"]

[node name="DashEcho" type="Timer" parent="States/Dash"]

[node name="DashCooldown" type="Timer" parent="."]
